--- a/src/_includes/sections/cta-section.html
+++ b/src/_includes/sections/cta-section.html
@@ -22,7 +22,7 @@
         {# BUTTONS #}
         {% if section.button1.text %}
         <div class="ctaSection__rightColumn">      
-            <a href="{{section.button1.url}}" class="[ button ] [ button--{{buttonStyle}} button--color-{{buttonColor}} ]">{{section.button1.text}}</a>
+            <a href="{{section.button1.url}}" class="[ button button--outline ]">{{section.button1.text}}</a>
         </div>
         {% endif %}
 
