--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -20,7 +20,7 @@
           <a href="/">Dates &amp; Rates</a>
           <a href="/">Request Info</a>
           <a href="/">CAC Blog</a>          
-          <a href="/">Enroll Now for 2021</a>          
+          <a href="/" class="accented-link">Enroll Now for 2021</a>          
         </div>
         <!-- /.site-head__status-bar -->
 
