--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -91,11 +91,11 @@ h1, h2 {
 @import 'blocks/card';
 @import 'blocks/card-section';
 @import 'blocks/cta-section';
-@import 'blocks/dg-2-go-banner';
-@import 'blocks/mag-section';
-@import 'blocks/large-section';
 @import 'blocks/definition-group';
 @import 'blocks/hamburger-menu';
+@import 'blocks/large-section';
+@import 'blocks/links';
+@import 'blocks/mag-section';
 @import 'blocks/nav';
 @import 'blocks/site-footer';
 @import 'blocks/site-head';
