new header, footer logos added

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -20,10 +20,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#fffbfb">
     <meta name="theme-color" content="#ffffff">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto:wght@300;500;900&display=swap" rel="stylesheet">
 
-    <style>
-      /* latin-ext */
+     <style>
+      {#/* latin-ext */
       @font-face {
         font-family: 'Overpass';
         font-style: normal;
@@ -58,7 +59,7 @@
         font-display: swap;
         src: url(https://fonts.gstatic.com/s/overpass/v5/qFdA35WCmI96Ajtm81keds7N4ho.woff2) format('woff2');
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-      }
+      }#}
       /* cyrillic-ext */
       @font-face {
         font-family: 'Raleway';
@@ -104,7 +105,7 @@
         src: url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVtzpbCIPrE.woff2) format('woff2');
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
       }
-    </style>
+    </style> 
 
     {# General critical styles #}
     <style>{% include "css/critical.css" %}</style>
