--- a/src/_includes/partials/site-footer.html
+++ b/src/_includes/partials/site-footer.html
@@ -3,8 +3,8 @@
     <div class="footer__grid [ flow ]">
 
       <div class="footer__logos">
-        <img width="200" height="112" src="/images/logos/canadian-adventure-camp-logo.png" alt="DelGrosso's Amusement Park and Laguna Splash Logo" />
-        {# <img src="/images/logos/explore-altoona-logo-traced.png" alt="Explore Altoona Logo" /> #}
+        <img height="100" src="/images/logos/ontario-camp-association-accredited-member-badge.png" alt="Ontario Camp Association Accredited Member Badge" />
+        <img height="100" src="/images/logos/amici-camping-charity-logo.png" alt="Amici Camping Charity" />
       </div>
 
       <ul class="footer__social-wrapper">
@@ -16,7 +16,8 @@
       </div>
 
       <div class="footer__address [ flow ]">
-        <p>Canadian Adventure Camp [SEO text here]</p>
+        <p class="text-600">Canadian Adventure Camp</p>
+        <p>[SEO text here]</p>
         <p><a href="mailto:info@canadianadventurecamp.com">info@canadianadventurecamp.com</a></p>
         <p>15 Idleswift Drive Thornhill, <br /> Ontario, L4J 1K9 Canada</p>
       </div>
@@ -28,14 +29,17 @@
           <li><a href="{{ nav[1].url }}">Specialty Programs</a></li>
           <li><a href="{{ nav[2].url }}">Youth Leadership Program</a></li>
           <li><a href="{{ nav[3].url }}">Date &amp; Rates</a></li>
+          <li><a href="{{ nav[3].url }}">NCCP &amp; Adult Camp</a></li>
+
         </ul>
       </div>
 
       <div class="footer__col col2">
         <h4>About</h4>
         <ul>
-          <li><a href="/history/">History</a></li>
           <li><a href="/join-our-team/">Join Our Team</a></li>
+          <li><a href="/join-our-team/">Community Initiatives</a></li>
+          <li><a href="/history/">History</a></li>
           <li><a href="{{ nav[4].url }}">Contact Us</a></li>
         </ul>
       </div>
