--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -100,9 +100,9 @@ $gorko-config: (
   'font': (
     'items': (
       // 'base': '"Overpass", Georgia, serif',
-      'base': 'Overpass, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif',
-      'sans': 'Overpass, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif',
-      'headline': 'Raleway, "Times New Roman", serif',
+      'base': '"Open Sans", "Helvetica Neue", Arial, sans-serif',
+      'sans': '"Open Sans", "Helvetica Neue", Arial, sans-serif',
+      'headline': 'Raleway,"Helvetica Neue", Arial, sans-serif',
       // 'headline': 'corben, "Times New Roman", serif',
     ),
     'output': 'standard',
