--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -1,117 +1,61 @@
 .site-head {
-  padding: get-size('300') 0;
   position: fixed;
-  top: 0;
   width: 100%;
-  z-index: 1000;
-  background: white;
-  border-bottom: 2px solid get-color('primary');
+  top: 0;
+  background-color: get-color('primary');
+  z-index: 900;
 
-  @include media-query('lg') {
-    padding: 0;
+  &__logo {
+    position: absolute;
+    top:-2.3rem;
+    left: 50%;
+    transform: translateX(-100px);
+    width: 200px;
+    z-index: 900;
   }
 
-  &__inner {
-    display: flex;
-    justify-content: space-around;
-    align-items: stretch;
-  }
+  &__inner {}
 
-  &__left-column {
+  &__topbar {
+    background-color: get-color('light');
+    padding: 0.5rem 0;
+
     
-    display: flex;
-    align-items: center;
-
-    @include media-query('lg') {
-      padding: get-size('300') 0;
-    }
-  }
-
-  &__middle-column {
     
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-
-    @include media-query('lg') {
-      display: block;
-      margin-left: 0;
-      margin-right: auto;
-      padding-top: get-size('700');
-    }
-   
-  }
-
-  &__right-column {
-    display: none;
-
-    border-left: 1px solid lightgray;
-    padding: get-size('600') 0 get-size('700') get-size('800') ;
-
-    @include media-query('lg') {
-      display: block;
-    }
-  }
-
-
-  &__brand {
-    flex-shrink: 0;
     
-    img {
-      height: 60px;
-      @include media-query('md') {
-        height: 100px;
-      }
-    }
-  }
+    & > div {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
 
-  &__phone {
-    font-size: get-size('400');
-    padding:0;
-    font-weight: 300;
-
-    span {
-      font-size: get-size('500');
+      
     }
-    
-    a {
+
+    & a {
+      text-transform: uppercase;
+      font-weight: 600;
       text-decoration: none;
-      color: get-color('primary');
-    }
-  }
-  
-  &__social {
-    padding-top: get-size('200');
-    display: flex;
-
-    @include media-query('lg') {
-      padding-top: 1.6rem !important;
     }
 
-    li {
-      padding-inline-end: get-size('400');
-    }
-
-    li:hover {
-      transform: scale(1.1);
-      transition: .1s;
-
-    }
-
-    a {
-      display: block;
-      svg {
-        display: block;
+    & > div > div:first-child {
+      & > * {
+        margin-right: get-size('600');
       }
     }
+
+    & > div > div:last-child {
+
+      & > * {
+        margin-left: get-size('600');
+      }
+    }
+
+    // color: #fff;
+    // a {
+    //   color: #fff;
+    // }
   }
 
 }
 
-.status-bar {
-  text-align-last: left;
 
-  a {
-    padding: get-size('300');
-  }
-}
