--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -119,3 +119,9 @@ h1, h2 {
 @import 'utilities/subtitle';
 @import 'utilities/visually-hidden';
 @import 'utilities/wrapper';
+
+
+.icon-down {
+  position: relative;
+  top: 0.1em;
+}
