--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -1,38 +1,129 @@
 <a class="[ skip-link ] [ button ]" href="#main-content">Skip to content</a>
 
 <header role="banner" class="[ site-head ]">
+  <div class="site-head__topbar text-350">
+    <div class="wrapper">
+      <div>
+        <a href="tel:1-800-966-1406">{% include "partials/svg/icon-phone.svg" %} 1 (800) 966-1406</a>
+        <a href="/">{% include "partials/svg/icon-calendar.svg" %} Dates &amp; Rates</a>
+        <a href="/">{% include "partials/svg/icon-question.svg" %} Request Info</a>
+      </div>
+
+      <div>
+        
+        <a href="/">{% include "partials/svg/icon-newspaper.svg" %} CAC Blog</a>          
+        <a href="/" class="accented-link">{% include "partials/svg/icon-question.svg" %} Enroll Now for 2021</a>   
+      </div>
+    </div>       
+  </div>
   <div class="wrapper">
 
     <div class="site-head__inner" x-data="{ mainMenuisOpen: false }">
 
-      {# LEFT COLUMN - BRAND #}
-      <div class="[ site-head__left-column ] [ site-head__brand ]">
-        <a href="/">
+        <a class="site-head__logo" href="/">
           <img src="/images/logos/canadian-adventure-camp-logo.png" alt="Canadian Adventure Camp Logo" />
         </a>
-      </div>
-      <!-- end [ site-head__left-column ] [ site-head__brand ] -->
 
-      {# MIDDLE COLUMN #}
-      <div class="[ site-head__middle-column ]">
+        
+        
+        {# /////////////////////////////////////////////////////////////// #}
+        {# NAV START #}
+        <nav class="[ nav ] [ site-head__nav ]" 
+          id="nav-list"
+          aria-label="Main Menu" 
+          x-bind:data-open="mainMenuisOpen" 
+          :aria-expanded="mainMenuisOpen" 
+        >
+          <ul class="nav__list">
 
-        <div class="[ status-bar ]">
-          <a href="/">Dates &amp; Rates</a>
-          <a href="/">Request Info</a>
-          <a href="/">CAC Blog</a>          
-          <a href="/" class="accented-link">Enroll Now for 2021</a>          
-        </div>
-        <!-- /.site-head__status-bar -->
+              {# nav is json object provided in data/nav.json #}
+              {% for mainNavItem in nav -%}
+                {# check if we have sub-items #}
+                {% if mainNavItem.children.length > 0 %}
+                  
+                {# main dropdown toggle #}
+                <li
+                  class="nav__item no-{{ loop.index }}"
+                  x-data="{ subMenuIsOpen: false }"
+                >
+                  <button
+                    aria-label="{{ mainNavItem.name}} sub-menu toggle"
+                    aria-controls="{{ mainNavItem.name | makeId}}-submenu" 
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    x-bind:data-state="subMenuIsOpen ? 'active' : ''"
+                    @click="subMenuIsOpen = !subMenuIsOpen"
+                  >
+                    {{-mainNavItem.name-}} {%- include "partials/svg/icon-caret-down.svg" -%}
+                  </button>
+                  
+                  {# submenu (columns wrapper) #}
+                  <ul 
+                    class="nav__submenu no-{{ loop.index }}"
+                    x-show="subMenuIsOpen"
+                    @click.away="subMenuIsOpen = false"
+                    id="{{ mainNavItem.name | makeId}}-submenu" 
+                    aria-label="{{ mainNavItem.name}} sub-menu"
+                    {# :data-show="submenuVisible" #}
+                  >
+                    {# submenu items (columns) #}
+                    {% for column in mainNavItem.children -%}
+                      {# column #}
+                      <li class="nav__column">
+                        {# column title #}
+                        <span class="col-title">{{column.name}}</span>
 
-        {# MAIN NAV #}
-        {% include 'partials/nav.html' %}
+                        {# CASE: normal column that has link items #}
+                        {% if column.children.length > 0 -%}
+                        <ul class="nav__column-items">
+                        {# list all column items #}
+                        {% for columnItem in column.children -%}
+                          <li><a href="{{columnItem.url}}">{{columnItem.name}}</a></li>
+                        {%- endfor %}
+                        {# END list column items #}
+                        </ul>
+                        {%- endif %}
 
-      </div>
-      <!-- /.site-head__middle-column -->
+                        {# CASE: banner (like for DG2GO) #}
+                        {% if column.banner %}
+                          <div class="banner">
+                            {% include 'partials/' + column.banner + '.html' %}
+                          </div>                        
+                        {% endif %}
+                      </li>
+                    {%- endfor %}
+                    <div class="arrow"></div>
+                  </ul>
+                </li>
+
+                {# if no subItems: #}
+                {% else %}            
+                <li><a href="/{{languagePrefix}}{{mainNavItem.url}}">{{mainNavItem.name}}</a></li>            
+                {% endif %}
+              {%- endfor %}
+
+          </ul>
+        </nav>
+        {# END NAVIGATION #}
+        {# MOBILE MENU TOGGLE #}
+          <div class="hamburger-menu__container">
+              <button 
+                aria-controls="nav-list" 
+                aria-label="Main Menu toggle" 
+                :aria-expanded="mainMenuisOpen" 
+                class="hamburger-menu"  
+                @click.prevent="mainMenuisOpen = !mainMenuisOpen" 
+                x-bind:data-open="mainMenuisOpen" 
+                >
+                  <div></div>
+              </button>
+          </div>
+          {# END MOBILE MENU TOGGLE #}
+          {# /////////////////////////////////////////////////////////////// #}
 
       {# RIGHRT COLUMN #}
       {# switches order on mobile to top #}
-      <div class="[ site-head__right-column ]">
+      {# <div class="[ site-head__right-column ]">
 
 
         <div class="site-head__phone">
@@ -43,7 +134,7 @@
         <ul class="site-head__social">
           {% include 'partials/social-icons.html' %}
         </ul>
-      </div>
+      </div> #}
       {# END RIGHT COLUMN #}
 
     </div>
