--- a/src/_includes/partials/social-icons.html
+++ b/src/_includes/partials/social-icons.html
@@ -2,5 +2,8 @@
   <a href="https://www.facebook.com/Canadian-Adventure-Camp-29598302267/" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Facebook Page</span>{% include "partials/svg/icon-fb.svg" %}</a>
 </li>
 <li>
+  <a href="https://www.youtube.com/user" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Youtube Channel</span>{% include "partials/svg/icon-youtube.svg" %}</a>
+</li>
+<li>
   <a href="https://www.youtube.com/user/justingerson1?feature=watch" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Instagram Page</span>{% include "partials/svg/icon-instagram.svg" %}</a>
 </li>
