--- a/src/scss/blocks/_links.scss
+++ b/src/scss/blocks/_links.scss
@@ -1,8 +1,11 @@
 .accented-link {
-  background-color: red;
-  border-radius: 10px;
-  color: white!important;
+  background-color: get-color('accent');
+  color: get-color('light');
+  // border-radius: 10px;
   text-decoration: none;
-  padding: 0.4em !important;
-  padding-top: 0.6em !important;
+  padding: 0.6em 1em !important;
+  // padding-top: 0.3em !important;
+  text-transform: uppercase;
+  font-weight: bold;
 }
+
