alert mockup added

--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -1,6 +1,13 @@
 <a class="[ skip-link ] [ button ]" href="#main-content">Skip to content</a>
 
+
+
 <header role="banner" class="[ site-head ]">
+  <div class="alert text-400">
+    <div class="wrapper">
+      <p><a href="#">Alert Text Here - Read our latest COVID Updates</a></p>
+    </div>
+  </div>
   <div class="site-head__topbar text-350">
     <div class="wrapper">
       <div>
