--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -125,3 +125,9 @@ h1, h2 {
   position: relative;
   top: 0.1em;
 }
+
+.alert {
+  background-color: #ffe000;
+  text-align: center;
+  padding: 0.25rem;
+}
