updated header alert

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -55,7 +55,7 @@ $gorko-colors: (
   'dark-glare': #42413b, 
   // 'light': #FFFDF5,
   'light': #F4F4F4,
-  'light-shade': #FFFDF5,
+  'light-shade': #F4F4F4,
   'light-glare': #FFF,
   'primary': #527033,
   'primary-shade': #3C5423,
