--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -12,7 +12,7 @@
 
   &__content {
     display: inline-block;
-    background-color: get-color('light');
+    background-color: get-color('light-shade');
     border-radius: 0 50px 0 0;
     
     padding: get-size('600') get-size('600');
