--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -3,11 +3,8 @@
 
 
 <header role="banner" class="[ site-head ]">
-  <div class="alert text-400">
-    <div class="wrapper">
-      <p><a href="#">Alert Text Here - Read our latest COVID Updates</a></p>
-    </div>
-  </div>
+  
+
   <div class="site-head__topbar text-350">
     <div class="wrapper">
       <div>
@@ -144,6 +141,17 @@
       </div> #}
       {# END RIGHT COLUMN #}
 
+    </div>
+    
+  </div>
+  <div class="alert text-400" x-data="{ alertvisible: true }" x-show.transition="alertvisible"
+    
+  >
+    <div class="wrapper">
+      <div class="alert__inner">
+        <p><a href="#">Alert Text Here - Read our latest COVID Updates</a></p>
+        <button @click="alertvisible = false">Dismiss</button>
+      </div>
     </div>
   </div>
 </header>
