small header updates various fixes

--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -144,9 +144,7 @@
     </div>
     
   </div>
-  <div class="alert text-400" x-data="{ alertvisible: true }" x-show.transition="alertvisible"
-    
-  >
+  <div class="alert text-400" x-data="{ alertvisible: true }" x-show.transition="alertvisible">
     <div class="wrapper">
       <div class="alert__inner">
         <p><a href="#">Alert Text Here - Read our latest COVID Updates</a></p>
