removed console.log

--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -26,7 +26,8 @@
 
 {% block content %}
 
-<script>console.log({{sitePage.content | dump | safe}})</script>
+
+{# <script>console.log({{sitePage.content | dump | safe}})</script> #}
 
 <div>
 {{pageHeader(title=sitePage.content.title, image=sitePage.content.image)}}
