--- a/src/_includes/partials/site-footer.html
+++ b/src/_includes/partials/site-footer.html
@@ -25,11 +25,11 @@
       <div class="footer__col col1">
         <h4>Programs</h4>
         <ul>
-          <li><a href="{{ nav[0].url }}">General Program</a></li>
-          <li><a href="{{ nav[1].url }}">Specialty Programs</a></li>
-          <li><a href="{{ nav[2].url }}">Youth Leadership Program</a></li>
-          <li><a href="{{ nav[3].url }}">Date &amp; Rates</a></li>
-          <li><a href="{{ nav[3].url }}">NCCP &amp; Adult Camp</a></li>
+          <li><a href="/programs/general-camp-program/">General Program</a></li>
+          <li><a href="/programs/specialty-summer-camp-programs/">Specialty Programs</a></li>
+          <li><a href="/all-new-youth-leadership-program/">Youth Leadership Program</a></li>
+          <li><a href="/dates-rates/">Date &amp; Rates</a></li>
+          <li><a href="/nccp-courses-and-adult-camp/">NCCP &amp; Adult Camp</a></li>
 
         </ul>
       </div>
@@ -40,7 +40,7 @@
           <li><a href="/join-our-team/">Join Our Team</a></li>
           <li><a href="/join-our-team/">Community Initiatives</a></li>
           <li><a href="/history/">History</a></li>
-          <li><a href="{{ nav[4].url }}">Contact Us</a></li>
+          <li><a href="/contact/">Contact Us</a></li>
         </ul>
       </div>
 
