--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -7,7 +7,7 @@
   
 
   @include media-query('md') {
-    padding-top: 22rem;
+    padding-top: 29rem;
   }
 
   &__content {
@@ -35,7 +35,7 @@
     }
   }
 
-  
+  background-position: center center;
   background-image: url('https://cdn.sanity.io/images/lwnx6aqb/production/192addb25424b75a86ef70b629971457e081c9a0-1200x794.jpg?fit=crop&w=1600&h=500');
 
 }
