--- a/src/_includes/sections/mag-section.html
+++ b/src/_includes/sections/mag-section.html
@@ -8,7 +8,7 @@
     {% if section.video %}
       <button
       class="glightbox" 
-      data-href="https://www.youtube.com/watch?v=Ydh9_nK87c4"
+      data-href="{{section.video}}"
       data-draggable="false"
       data-videos-width="100vw"
       data-type="video"
